--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
 
 </head>
 <body>
-<div class="row">
-	<div class="col-md-12">row 1 col 1</div>
-</div>
-<div class="row">
-	<div class="col-md-12"> row 2 col 1</div>
-</div>
-<div class="row">
-	<div class="row">
-		<div class="col-md-6">row3 sub1 col1</div>
-		<div class="col-md-6">row3 sub1 col2</div>
+	<div class="container">
+				<div class="row">
+					<div class="col-md-12">row 1 col 1</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12"> row 2 col 1</div>
+				</div>
+				<div class="row">
+					<div class="row">
+						<div class="col-md-6">row3 sub1 col1</div>
+						<div class="col-md-6">row3 sub1 col2</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">row3 sub2 col1</div>
+						<div class="col-md-6">row3 sub2 col2</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">row3 sub3 col1</div>
+						<div class="col-md-6">row3 sub3 col2</div>
+					</div>
+				</div>
+
 	</div>
-	<div class="row">
-		<div class="col-md-6">row3 sub2 col1</div>
-		<div class="col-md-6">row3 sub2 col2</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6">row3 sub3 col1</div>
-		<div class="col-md-6">row3 sub3 col2</div>
-	</div>
-</div>
+
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
   </script>
