--- a/index.html
+++ b/index.html
@@ -31,17 +31,16 @@
 						<div class="col-md-6">row3 sub2 col2</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6">row3 sub3 col1</div>
+						<div class="col-md-6"><div id="uber" class="button"></div></div>
 						<div class="col-md-6">row3 sub3 col2</div>
 					</div>
 				</div>
 
 	</div>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
   </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="assets/javascript/discoverybeer.js"></script>
 </body>
 </html>
