--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 	<title>DiscoveryBeer</title>
 
-
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -36,11 +35,10 @@
 					</div>
 				</div>
 
-	</div>
-
+]
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
   </script>
-<script type="text/javascript" src="assets/javascript/discoverybeer.js"></script>
+<script type="text/javascript" src="assets/javascript/discoverybeer.js"></script>+
 </body>
 </html>
