add click for uber button

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
 		<title>DiscoveryBeer</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	
+
 </head>
 <body>
 	<div class="container">
@@ -27,7 +27,7 @@
 					</div>
 				<div class="row">
 					<div id="map" class="col-md-12"></div>
-				
+
 				<div class="row">
 					<div class="row">
 						<div class="col-md-6"></div>
@@ -38,8 +38,12 @@
 						<div class="col-md-6"></div>
 					</div>
 					<div class="row">
-						<div class="col-md-6"><div id="uber" class="button">
-						<p id="time">Estimating Time</p></div>
+						<div class="col-md-6">
+							<a href="#">
+								<div id="uber" class="button">
+									<p id="time">Estimating Time</p>
+								</div>
+							</a>
 						<div class="col-md-6"></div>
 					</div>
 				</div>
